Fixed jumpy pinned tabs

--- a/chrome.css
+++ b/chrome.css
@@ -243,7 +243,7 @@ not (-moz-bool-pref: "zen.view.use-single-toolbar") {
         .tab-audio-button{
           opacity: 100% !important;
         }
-        tab:is([zen-essential], [pinned]){
+        tab:is([zen-essential]){
           width: 100% !important;
         }
         vbox.zen-workspace-tabs-section.zen-workspace-pinned-tabs-section {
